--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "bundle-visualize": "./node_modules/.bin/react-native-bundle-visualizer"
   },
   "dependencies": {
     "react": "17.0.1",
@@ -24,8 +25,9 @@
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
+    "react-native-bundle-visualizer": "^2.2.1",
     "react-test-renderer": "17.0.1",
-    "typescript": "^3.8.3"
+    "typescript": "4.2.4"
   },
   "resolutions": {
     "@types/react": "^17"
