--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "android:build": "cd android && ./gradlew bundleRelease && cd ..",
+    "android:release": "npx react-native run-android --variant=release",
+    "android:clean": "cd android && ./gradlew clean && cd ..",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "bundle-visualize": "./node_modules/.bin/react-native-bundle-visualizer"
