--- a/ios/measurement.xcodeproj/xcshareddata/xcschemes/measurement.xcscheme
+++ b/ios/measurement.xcodeproj/xcshareddata/xcschemes/measurement.xcscheme
@@ -60,6 +60,13 @@
             ReferencedContainer = "container:measurement.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "DYLD_PRINT_STATISTICS"
+            value = "1"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
